--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,8 +4,24 @@
 ARG VARIANT="jammy"
 FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 
-# [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+ENV DEBIAN_FRONTEND=noninteractive
 
+# Install common packages
+RUN apt-get update \
+    && apt-get -y install build-essential cppcheck valgrind clang lldb llvm gdb \
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
+# Install additional OS packages.
+RUN apt-get update \
+    && apt-get -y install --no-install-recommends \
+    python3-dev \
+    python3 \
+    ca-certificates \
+    python3-numpy \
+    python3-setuptools \
+    python3-wheel \
+    python3-pip \
+    g++ \
+    gcc \
+    ninja-build \
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
